--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,9 @@
 /* Add CSS Styling */
+.avatar.proportioned {
+    height: auto;
+    width: 300px;
+}
+.avatar.ditorted {
+    height: 400px;
+    width: 200px;
+}
