--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,8 +10,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
-
+.container{
+  display: flex;
+  flex-wrap: wraps;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 52px;
+}
+.images{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
+}
+.text{
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
