--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
 }
 
 .icon {
@@ -33,6 +34,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 16px;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -67,3 +70,22 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+}
+.container2 {
+  padding-left: 60px;
+  padding-bottom: 16px;
+}
+.text{
+  padding-bottom: 16px;
+}
+.header{
+  padding-right: 120px;
+  font-weight: 900;
+  font-size: 18px;
+}
+
